[tool.poetry]
name = "fi_tools"
version = "0.1.0"
description = ""
authors = ["Brahian Munar Rodriguez <mathbrahian@gmail.com>"]
license = "}"
readme = "README.md"
packages = [{include = "fi_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2 = "^2.9.5"
graphene-django = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
